changing css flex box to align items correctly

--- a/style.css
+++ b/style.css
@@ -4,29 +4,33 @@ body {
 .header {
     display: flex;
       background: #1F2937;
+      padding: 18px;
       justify-content: space-between;
-      padding: 8px;
-      
+      align-items: center;
     } 
 
     .logo {
       color: #f9faf8;
-      font-size: 24px;
-    }
-      
+      font-size: 24px;}
+
     a {
-      /* this removes the line under our links */
       text-decoration: none;
-      color: rebeccapurple;
+        font-size: 18px;
+        color: #e5e7eB;
     }
     
     ul {
-      display: flex;
       list-style-type: none;
       margin: 0;
       padding: 0;
       gap: 16px;
     }
-    .left,.right {display:flex;
-      align-items: center;
-    gap: 16px;}
+.headertop{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.links {
+    display: flex;
+    justify-content: space-between;
+}
